# weekly-alarm

./: .gitignore  .hintrc  LICENSE.md  README.md  holidaysample.csv  package-lock.json  package.json  tsconfig.json  webpack.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220831_154955_create_app_config_table.rs  m20220831_221346_create_daily_chimes_table.rs  m20220901_222248_create_chime_data_table.rs  m20220901_230002_create_schedule_table.rs  m20220901_234143_create_public_holidays_table.rs  m20220916_170958_create_audio_table.rs
src-tauri/src/: main.rs
src-tauri/src/api/: chimes.rs  config.rs  holiday.rs  mod.rs  sound.rs  test.rs
src-tauri/src/app/: datetime.rs  info.rs  init.rs  mod.rs  path.rs  test.rs
src-tauri/src/crud/: app_config.rs  audio_data.rs  chime_data.rs  common.rs  daily_chimes.rs  mod.rs  public_holidays.rs  schedule.rs
src-tauri/src/entities/: app_config.rs  audio_data.rs  chime_data.rs  daily_chimes.rs  mod.rs  prelude.rs  public_holidays.rs  schedule.rs
src/scss/: bootstrap-custom.scss
src/ts/: App.tsx  ModalDialog.tsx  about.tsx  alarmSound.tsx  application.ts  bootstrap-components.tsx  clockbody.tsx  common.tsx  confdialog.tsx  deleteChimeDialog.tsx  deleteReservedayDialog.tsx  editChimeDialog.tsx  editChimesDiv.tsx  editReservedayDialog.tsx  editSoundItemDialog.tsx  holidayConf.tsx  index.tsx  modalSample.tsx  newChimesDialog.tsx
src/ts/@types/: definitions.d.ts
