[package]
name = "weekly-alarm"
version = "0.1.0"
description = "Weekly Alarm App"
authors = ["marochat", "mamiyan@marochanet.org"]
license = ""
repository = "https://github.com/marochat/weekly-alarm"
default-run = "weekly-alarm"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["api-all", "cli", "devtools"] }
tokio = { version = "1.22.0", features = ["full"] }
dotenv = "0.15.0"
sea-orm = { version = "0.9.2", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
migration = { path = "migration" }
regex = "1.7.0"
urlencoding = "2.1.0"
chrono = "0.4.23"
csv = "1.1.6"
once_cell = "1.16.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
